--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 /* Header styling */
 header {
     background: url('assets/Designer\ \(10\).png') no-repeat center center/cover;
-    color: black;
+    color: white;
     text-align: center;
     padding: 50px 0;
     position: relative;
